--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spaceballs",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://earwicker.com/spaceballs",
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.7",
